# movies

./: README.md  app.ipynb  pyproject.toml
.ipynb_checkpoints/: app-checkpoint.ipynb
